--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,12 +3,12 @@
         <img src="../../img/image.png">
     </div>
     <div id="path">
-        <a href="#">Home</a>
-        <a href="#">Analytics</a>
-        <a href="#">About</a>
+        <a href="/">Home</a>
+        <a href="/analytics">Analytics</a>
+        <a href="/about">About</a>
     </div>
     <div id="log">
-        <button>Login</button>
-        <button>Signup</button>
+       <a href="/login">Login</a>
+       <a href="/signup">Sign Up</a>
     </div>
 </div>
