--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<div id="nav">
+<div id="nav" >
     <div id="logo">
         <img src="../../img/image.png">
     </div>
@@ -9,6 +9,6 @@
     </div>
     <div id="log">
        <a href="/login">Login</a>
-       <a href="/signup">Sign Up</a>
+       <a href="/register">Sign Up</a>
     </div>
 </div>
