--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,7 +1,8 @@
 <%- include('./partials/boilerplate')%>
 
     <%- include('./partials/header')%>
-
+    <h1 class="text-white">register page
+    </h1>
     <%- include('./partials/footer')%>
 
 <%- include('./partials/lower')%>
