--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,9 +1,10 @@
 <%- include('./partials/boilerplate')%>
 
     <%- include('./partials/header')%>
-    <div class="w-full h-screen">
-        
+    <div id="error" class="w-full border h-screen flex items-center justify-center">
+        <h1 class="text-white text-6xl"> <%= message %> </h1>
     </div>
+
     <%- include('./partials/footer')%>
 
 <%- include('./partials/lower')%>
