--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,6 +1,5 @@
 <%- include('./partials/boilerplate')%>
     <%- include('./partials/header')%>
-    
-    
+        <h1>login page</h1>
     <%- include('./partials/footer')%>
 <%- include('./partials/lower')%>
