--- a/src/public/css/firstpage.css
+++ b/src/public/css/firstpage.css
@@ -18,6 +18,7 @@ html,body{
     background-color: #fff;
     align-items: center;
     justify-content: space-around;
+    border-bottom: 2px solid #000;
 }  
 #nav #logo{
     height: 8vh;
