--- a/src/views/Analytics.ejs
+++ b/src/views/Analytics.ejs
@@ -1,74 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sales Pie Chart</title>
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-</head>
-<body>
-  <div id="pie-chart"></div>
+<%- include('./partials/boilerplate')%>
+  <%- include('./partials/header')%>
+    <div class="w-full h-screen flex items-center justify-center relative bg-black">
+      <h1 class="absolute top-10 text-white text-3xl">Sales Visualisation</h1>
+      <div id="container" class="flex items-center justify-between w-full p-6 h-auto ">
+        <div id="basis" class=" w-auto h-auto p-6 flex gap-10 flex-col">
+          <button id="coursessales" class="bg-sky-400 p-4 rounded-2xl text-lg text-white hover:text-black hover:transition-all font ">Course Sales</button>
+          <button id="continentsales" class="bg-sky-400 p-4 rounded-2xl text-lg text-white hover:text-black hover:transition-all ">Continent Sales</button>
+          <button id="topicwise" class="bg-sky-400 p-4 rounded-2xl text-lg text-white hover:text-black hover:transition-all">Topic Sales</button>
+          <button id="totalsales" class="bg-sky-400 p-4 rounded-2xl text-lg text-white hover:text-black hover:transition-all">Total Sales</button>
+        </div>
+        <div class="text-white border p-4">
+          Total Courses:- <span id="totalcource"></span> <br>
+          Total Topic: -  <span id="totaltopic"></span>      <br>
+          Total Revenue:- <span id="total"></span>
+        </div>
+        <div id="pie-chart">
 
-  <script>
-    // Fetch sales data from backend API
-    fetch('/sales')
-      .then(response => response.json())
-      .then(data => {
-        // Process the fetched data
-        const salesData = data;
+        </div>
+      </div>
 
-        // Aggregate sales by topics
-        const salesByTopic = {};
-        salesData.forEach(sale => {
-          sale.topics.forEach(topic => {
-            if (!salesByTopic[topic]) {
-              salesByTopic[topic] = 0;
-            }
-            salesByTopic[topic] += sale.sales;
-          });
-        });
-
-        // Convert salesByTopic object to an array of objects for D3 pie layout
-        const pieData = Object.entries(salesByTopic).map(([topic, sales]) => ({ topic, sales }));
-
-        // Set up SVG dimensions
-        const width = 500;
-        const height = 500;
-        const radius = Math.min(width, height) / 2;
-
-        // Create SVG element
-        const svg = d3.select("#pie-chart")
-          .append("svg")
-          .attr("width", width)
-          .attr("height", height)
-          .append("g")
-          .attr("transform", `translate(${width / 2},${height / 2})`);
-
-        // Define pie layout
-        const pie = d3.pie()
-          .value(d => d.sales);
-
-        // Generate pie slices
-        const arc = d3.arc()
-          .innerRadius(0)
-          .outerRadius(radius)
-          
-
-        // Append slices to the pie chart
-        const slices = svg.selectAll("path")
-          .data(pie(pieData))
-          .enter()
-          .append("path")
-          .attr("d", arc)
-          .attr("fill", (d, i) => d3.schemeCategory10[i])
-          .transition()
-
-        slices.append("title")
-          .text(d => `${d.data.topic}: ${d.data.sales}`);
-      })
-      .catch(error => {
-        console.error('Error fetching data:', error);
-      });
-  </script>
-</body>
-</html>
+    </div>
+    <%- include('./partials/footer')%>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+      <script src="../js/analytics.js"></script>
+      <%- include('./partials/lower')%>
