--- a/src/views/partials/boilerplate.ejs
+++ b/src/views/partials/boilerplate.ejs
@@ -6,5 +6,6 @@
     <title><%- title %></title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/firstpage.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
