--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<div>
+<div class="border-t-4 border-black">
 <section class="relative overflow-hidden bg-white py-8">
     <div class="container relative z-10 mx-auto px-4">
       <div class="-m-8 flex flex-wrap items-center justify-center">
