--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,8 +1,106 @@
-<%- include('./partials/boilerplate')%>
+<!-- <%- include('./partials/boilerplate')%>
 
     <%- include('./partials/header')%>
     <h1 class="text-white">register page
     </h1>
     <%- include('./partials/footer')%>
 
-<%- include('./partials/lower')%>
+<%- include('./partials/lower')%> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        body{
+            background-image: url('https://img.freepik.com/free-vector/realistic-blurred-spring-background_52683-34521.jpg?w=996&t=st=1688618250~exp=1688618850~hmac=24316c8fb22a9215cce9b321e7fca8594e43429890e96d31139d7fb6b4b59b4a');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            height: 100vh;
+        }
+        form{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .container{
+            width: 400px;
+            height: 450px;
+        }
+        a{
+            text-decoration: none;
+        }
+        .fa-google
+        {
+            background: conic-gradient(from -45deg, #f32c1a 110deg, #327cf5 90deg 180deg, #34a853 180deg 270deg, #fbbc05 270deg) 73% 55%/150% 150% no-repeat;
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            -webkit-text-fill-color: transparent;
+        }
+    </style>
+</head>
+<body>
+    <form action="/register" method="post">
+        <div class="container">
+            <h1 style="display: flex;justify-content: center;align-items: center;">Sign-In</h1>
+            <i style="margin-left: 10%;" class="fa fa-user" aria-hidden="true"></i>
+            
+            <label style="font-size: 16px;font-weight: 700;margin-left: 2%;" for="username">Username</label>
+            <br>
+            <br>
+            <input style="margin-left: 15%;width: 80%;height: 30px;display:block;margin: auto;border-radius: 5px;border: 1px solid black;padding: 0px 0px 0px 5px;" type="text" placeholder="Username" id="username" name="username">
+            <br>
+            <i style="margin-left: 10%;" class="fa fa-envelope" aria-hidden="true"></i>
+            <label style="font-size: 16px;font-weight: 700;margin-left: 2%;" for="email">E-Mail</label>
+            <br>
+            <br>
+            <input style="margin-left: 15%;width: 80%;height: 30px;display:block;margin: auto;border-radius: 5px;border: 1px solid black;padding: 0px 0px 0px 5px;" type="text" placeholder="E-Mail" id="email" name="email">
+            <br>
+            <i style="margin-left: 10%;" class="fa-solid fa-lock"></i>
+            <label style="font-size: 16px;font-weight: 700;margin-left: 2%;" for="password">Password</label>
+            <br>
+            <br>
+            <input style="margin-left: 15%;width: 80%;height: 30px;display:block;margin: auto;border-radius: 5px;border: 1px solid black;padding: 0px 0px 0px 5px;" type="password" placeholder="Password " id="password" name="password">
+            <i class="fa fa-eye-slash" aria-hidden="true" id="eye" style="position: relative;left: 80%;bottom: 5.5%;"></i>
+            <br>
+
+            <button style="font-size: 16px;width: 80%;height: 30px;display:block;margin: auto;border-radius: 5px; border: 1px solid black;background-color: #00FFFF;margin-top: 3%;" >Register </button>
+            <p style="display: flex;justify-content: center;align-items: center;font-size: 16px;">Already a User ?<a href="/login" target="_blank">Login</a></p>
+            <p style="display: flex;justify-content: center;align-items: center;font-size: 16px;">Or</p>
+            <ul style="list-style: none;">
+                <li style="margin-left: -10%;display: flex;justify-content: center;align-items: center;">
+                    <a  href="https://www.facebook.com/" target="_blank"><i style="font-size: 35px;color: rgb(48, 48, 244);" class="fa-brands fa-facebook"></i></a></i>
+                    <a  href="https://accounts.google.com/InteractiveLogin/signinchooser" target="_blank"><i style="font-size: 35px;color: red;padding: 0px 30px;" class="fab fa-google fa "></i></a></i>
+                    <a href="https://www.linkedin.com/login" target="_blank"><i style="font-size: 35px;color: blue;" class="fa-brands fa-linkedin"></i></a>
+                </li>
+            </ul>
+        </div>
+    </form>
+    <script>
+        
+        const a=document.getElementById("eye")
+        const b=document.getElementById("password")
+        a.addEventListener("click",function(){
+            if(b.type==="password")
+            {
+                b.type="text"
+                this.classList.add("fa-eye")
+                this.classList.remove("fa-eye-slash")
+            }
+            else
+            {
+                b.type="password"
+                this.classList.remove("fa-eye")
+                this.classList.add("fa-eye-slash")
+            }
+        })
+    </script>
+</body>
+</html>
