pie chart added

--- a/src/views/Analytics.ejs
+++ b/src/views/Analytics.ejs
@@ -9,10 +9,11 @@
           <button id="topicwise" class="bg-sky-400 p-4 rounded-2xl text-lg text-white hover:text-black hover:transition-all">Topic Sales</button>
           <button id="totalsales" class="bg-sky-400 p-4 rounded-2xl text-lg text-white hover:text-black hover:transition-all">Total Sales</button>
         </div>
-        <div class="text-white border p-4">
-          Total Courses:- <span id="totalcource"></span> <br>
-          Total Topic: -  <span id="totaltopic"></span>      <br>
-          Total Revenue:- <span id="total"></span>
+        <div class="text-white text-black flex flex-col p-4">
+          <h1>Total Courses:- <span id="totalcource"></span> </h1>
+          <h1>Total Topic: -  <span id="totaltopic"></span></h1>
+          <h1>Total Revenue:- <span id="total"></span></h1>
+          <h1>Total Sales : - <span id="ans"></span></h1>
         </div>
         <div id="pie-chart">
 
