--- a/src/views/firstpage.ejs
+++ b/src/views/firstpage.ejs
@@ -1,9 +1,19 @@
 <%- include('./partials/boilerplate')%>
 
     <%- include('./partials/header')%>
-    <div class="w-full h-screen">
-        
-    </div>
-    <%- include('./partials/footer')%>
+        <div class="w-full h-full">
+            <div>
+                <h1 class="w-full text-center text-white text-4xl m-6 p-4">' Visualize data. Simplify insights '</h1>
+                <div class="flex  items-center gap-20">
+                    <img class="w-1/2 h-1/2 object-cover rounded-3xl" src="../img/6572402_3270961.jpg" alt="">
+                    <div class="flex flex-col items-center justify-center">
+                        <h4 class="italic text-2xl right-10 text-white ">Analyse Your data like never before</h4>
+                        <a href="/analytics" class="text-white mt-10 p-2 rounded-lg bg-sky-500 border w-fit h-auto">Analyse</a>
+                    </div>
 
-<%- include('./partials/lower')%>
+                </div>
+
+            </div>
+        </div>
+        <!-- <%- include('./partials/footer')%> -->
+        <%- include('./partials/lower')%>
